# dbml-zed

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION.md  LICENSE-APACHE  Makefile  README.md  build.sh  extension.toml  install.sh  test.dbml  verify.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
languages/: brackets.scm  config.toml  folds.scm  highlights.scm
languages/dbml/: config.toml  highlights.scm
languages/dbml/queries/: breadcrumbs.scm
src/: dbml.rs  lib.rs
src/languages/dbml/: config.toml  highlights.scm  indents.scm  injections.scm
